--- a/package.json
+++ b/package.json
@@ -45,5 +45,8 @@
 	},
 	"svelte": "./dist/index.js",
 	"types": "./dist/index.d.ts",
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"clsx": "^1.2.1"
+	}
 }
