--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "altea",
 	"version": "0.1.9",
 	"license": "MIT",
+	"main": "dist/index.js",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && npm run package",
@@ -16,8 +17,7 @@
 	"exports": {
 		".": {
 			"types": "./dist/index.d.ts",
-			"svelte": "./dist/index.js",
-			"import": "./dist/index.js"
+			"svelte": "./dist/index.js"
 		},
 		"./globals.css": "./dist/styles/globals.css"
 	},
