--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
 	"name": "altea",
-	"version": "0.1.11",
+	"version": "0.1.12",
 	"license": "MIT",
-	"main": "./dist/index.js",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && npm run package",
@@ -14,15 +13,9 @@
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write ."
 	},
-	"exports": {
-		".": {
-			"types": "./dist/index.d.ts",
-			"svelte": "./dist/index.js"
-		},
-		"./globals.css": "./dist/styles/globals.css"
-	},
 	"files": [
-		"dist"
+		"dist",
+		"src"
 	],
 	"peerDependencies": {
 		"svelte": "^3.57.0"
@@ -46,6 +39,7 @@
 		"vite": "^4.0.0"
 	},
 	"svelte": "./dist/index.js",
+	"main": "./dist/index.js",
 	"types": "./dist/index.d.ts",
 	"type": "module",
 	"dependencies": {
