--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "altea",
-	"version": "0.1.12",
+	"version": "0.1.14",
 	"license": "MIT",
 	"scripts": {
 		"dev": "vite dev",
@@ -13,9 +13,15 @@
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write ."
 	},
+	"exports": {
+		".": {
+			"types": "./dist/index.d.ts",
+			"svelte": "./dist/index.js"
+		},
+		"./globals.css": "./dist/styles/globals.css"
+	},
 	"files": [
-		"dist",
-		"src"
+		"dist"
 	],
 	"peerDependencies": {
 		"svelte": "^3.57.0"
